# fs-hasher

./: .gitignore  .release-please-manifest.json  README.md  install.sh  package.json  pnpm-lock.yaml  release-please-config.json
.github/workflows/: ci.yml  release.yml
client-js/: CHANGELOG.md  package.json  pnpm-lock.yaml
client-js/src/: binary.ts  client.test.ts  connection.ts  daemon.ts  hash.ts  index.ts  types.ts
daemon/: Cargo.toml
daemon/src/: daemon.rs  hasher.rs  persistence.rs  server.rs
fswatchd/: CHANGELOG.md  Cargo.toml
fswatchd/src/: daemon.rs  hash_service.rs  hasher.rs  logging.rs  main.rs  persistence.rs  protocol.rs  server.rs  session.rs  transport.rs
