[package]
name = "fswatchd"
version = "0.3.0"
edition = "2024"
description = "Fast file system watcher daemon with content hashing"
repository = "https://github.com/altinokdarici/fs-hasher"
license = "MIT"
keywords = ["file", "watch", "hash", "daemon", "cache"]
categories = ["filesystem", "development-tools"]

[[bin]]
name = "fswatchd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
globset = "0.4.18"
ignore = "0.4.25"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
